// Vitest Snapshot v1

exports[`should render the multiSelect with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-13"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          MultiSelectLabel
        </h6>
        <div
          class="makeStyles-subscribers-14"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="MultiSelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-11 makeStyles-style-12"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the multiSelect with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          MultiSelectLabel
        </h6>
        <div
          class="makeStyles-subscribers-9"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="MultiSelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-6 makeStyles-style-7"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the multiSelect without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-3"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          MultiSelectLabel
        </h6>
        <div
          class="makeStyles-subscribers-4"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="MultiSelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;
